kubernetes/apps/monitoring/influxdb/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/appName: "influxdb"
    hajimari.io/icon: "pier-crane"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: influxdb-brad.${SECRET_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "influxdb-brad.${SECRET_DOMAIN}"
      secretName: "influxdb-brad-tls"
  rules:
    - host: "influxdb-brad.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
